# delv

./: .gitignore  README.md  pyproject.toml
delv/: __init__.py  cli.py  config.py  display.py  editor.py  main.py  storage.py  styles.tcss  themes.py  tree.py  tui.py
